# text-to-cypher

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .mcp.json  .vercelignore  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.local  FINAL_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  RELEASES.md  VERCEL.md  VERSION  docker-build.sh  entrypoint.sh  justfile  readme.md  release-help.sh  rustfmt.toml  site.md  supervisord.conf  vercel.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  cleanup-releases.yml  docker-release.yml  release.yml
api/: text_to_cypher.rs
assets/cypher-skills/: SOURCE.md
assets/cypher-skills/falkordb-fulltext-search/: skill.md
assets/cypher-skills/falkordb-index-aware-predicates/: skill.md
assets/cypher-skills/falkordb-parameterized-queries/: skill.md
assets/cypher-skills/falkordb-path-finding/: skill.md
assets/cypher-skills/falkordb-vector-search/: skill.md
docs/: BEST_PRACTICES.md  DOCKER_RELEASE.md  IMPROVEMENTS.md  LIBRARY_API.md  PR_103_DYNAMIC_SKILLS_AND_RUST_COPILOT_SDK.md  PYTHON_USAGE.md  SUMMARY.md  TYPESCRIPT_USAGE.md
docs/hero-gif/: .gitignore  README.md  package-lock.json
docs/hero-gif/public/: code1.txt  code2.cypher
docs/hero-gif/src/: Main.tsx  ProgressBar.tsx  font.ts
examples/: Dockerfile.download  inspect_tool_schema.rs  library_usage.rs  list_client_models.rs  list_models.rs  token_usage.rs
examples/docker-releases/: Dockerfile.multistage  Dockerfile.simple  Dockerfile.versioned  README-comprehensive.md  README.md  build-and-push.sh  build-examples.sh  build-local.sh  docker-compose.yml  run-examples.sh
src/: chat.rs  core.rs  error.rs  formatter.rs  lib.rs  main.rs  models_catalog.rs  processor.rs  streaming.rs  template.rs  udf.rs  usage.rs  validator.rs  vercel.rs
src/mcp/: mcp_server.rs  mod.rs  server_handler.rs  tools.rs
src/schema/: attribute.rs  discovery.rs  entity.rs  mod.rs  relation.rs  schema.rs
src/skills/: builtin.rs  loader.rs  mod.rs  parser.rs
templates/: falkordb_reference.txt  last_request_prompt.txt  system_prompt.txt  user_prompt.txt
