[package]
name = "text-to-cypher"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
actix-web = "4"
actix-web-lab = "0.24.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = "5.4.0"
utoipa-swagger-ui = {version = "9.0.2", features = ["actix-web"]}
tracing = { version = "0.1", features = ["default"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
dashmap = "6.1.0"
tokio-stream = "0.1"
futures-util = "0.3"
genai = "0.3.5"
falkordb = { version = "0.1.11", features = ["tokio"] }
strum = { version = "0.27", features = ["derive"] }
