[package]
name = "text-to-cypher"
version = "0.1.0"
edition = "2024"
description = "A REST API for translating natural language text to Cypher queries using AI models"
license = "MIT"
repository = "https://github.com/FalkorDB/text-to-cypher"
keywords = ["cypher", "graph", "database", "ai", "nlp"]
categories = ["database", "web-programming::http-server"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
multiple-crate-versions = "allow"

[dependencies]
actix-web = "4"
actix-multipart = "0.6"
actix-web-lab = "0.24.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
utoipa = "5.4.0"
utoipa-swagger-ui = {version = "9.0.2", features = ["actix-web"]}
tracing = { version = "0.1", features = ["default"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
dashmap = "6.1.0"
tokio-stream = "0.1"
futures-util = "0.3"
genai = "0.3.5"
falkordb = { version = "0.1.11", features = ["tokio"] }
strum = { version = "0.27.2", features = ["derive"] }
async-trait = "0.1.89"
futures = "0.3.31"
rust-mcp-sdk = { version = "0.5.0", default-features = false, features = ["server", "macros", "hyper-server", "2025_06_18"] }
dotenvy = "0.15"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls"] }
regex = "1.0"
moka = { version = "0.12.10", features = ["sync"] }

