[package]
name = "text-to-cypher"
version = "0.1.9"
edition = "2024"
rust-version = "1.85"
description = "A library and REST API for translating natural language text to Cypher queries using AI models"
license = "MIT"
repository = "https://github.com/FalkorDB/text-to-cypher"
keywords = ["cypher", "graph", "database", "ai", "nlp"]
categories = ["database", "web-programming::http-server"]
readme = "readme.md"
authors = ["FalkorDB"]
homepage = "https://github.com/FalkorDB/text-to-cypher"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
multiple-crate-versions = "allow"

[features]
default = ["server"]
server = [
    "dep:actix-web",
    "dep:actix-multipart",
    "dep:actix-web-lab",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "dep:dashmap",
    "dep:tokio-stream",
    "dep:rust-mcp-sdk",
    "dep:dotenvy",
    "dep:moka",
    "dep:vercel_runtime",
    "dep:hyper",
    "dep:tracing-subscriber",
    "dep:uuid",
    "dep:futures-util",
    "dep:async-stream",
    "dep:reqwest",
]

[dependencies]
# Core library dependencies (always included)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tracing = { version = "0.1", features = ["default"] }
tokio = { version = "1.47.1", features = ["full"] }
genai = "0.5.1"
falkordb = { version = "0.2.1", features = ["tokio"] }
async-trait = "0.1.89"
futures = "0.3.31"
regex = "1.0"
# Force aws-lc-rs 1.15.3 which uses aws-lc-sys 0.36.0 (fixes Alpine/ARM64 cross-compilation)
aws-lc-rs = "1.15.3"

# Server-specific dependencies (optional)
actix-web = { version = "4", optional = true }
actix-multipart = { version = "0.6", optional = true }
actix-web-lab = { version = "0.24.3", optional = true }
utoipa = { version = "5.4.0", optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
uuid = { version = "1.19.0", features = ["v4"], optional = true }
dashmap = { version = "6.1.0", optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
strum = { version = "0.27.2", features = ["derive"] }
rust-mcp-sdk = { version = "0.5.0", default-features = false, features = ["server", "macros", "hyper-server", "2025_06_18"], optional = true }
dotenvy = { version = "0.15", optional = true }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls"], optional = true }
moka = { version = "0.12.10", features = ["sync"], optional = true }
vercel_runtime = { version = "1.1.3", optional = true }
hyper = { version = "0.14", optional = true }

# Main binary for standalone execution
[[bin]]
name = "text-to-cypher"
path = "src/main.rs"
required-features = ["server"]

# Serverless function handler for Vercel
[[bin]]
name = "text_to_cypher"
path = "api/text_to_cypher.rs"
required-features = ["server"]
